adjusted theme option wrapper to avoid overflow

--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ footer{
     }
     
     #theme-options-wrapper{
-        width: 90%;
+        width: 70%;
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
@@ -206,10 +206,10 @@ footer{
     }
     .theme-dot{
         height: 30px;
-        width: 90%;
+        width: 100%;
         background-color: #000;
         border-radius: 5px;
-        margin: 2px;
+        margin: 5px;
     }
 
     
